# walki-talkie

./: README.md
backend/: pyproject.toml
backend/core/: database.py  embedding.py  gemini_ocr.py  llm_engine.py  ocr_processor.py
backend/core/data/: app.db
